# Xumes

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  main.py  mkdocs.yml  pyproject.toml  requirements.txt  testing_example.py
docs/: architecture.md  cli.md  description.md  features.md  game_side.md  index.md  start_tester.md  steps.md  trainers.md  training_side.md  usage.md
docs/implement_with_observables/: game_side_with_observables.md
docs/implement_without_observables/: game_side_without_observables.md  training_side_without_observables.md
docs/source/: architecture.rst  cli.rst  conf.py  features.rst  index.md  index.rst  installation.rst  quickstart.rst  steps.rst  trainers.rst  usage.md
framework/game_service_module/: communication_service.py  event_factory.py  game_element_state.py  game_service.py  i_communication_service_game.py  i_game_event.py  i_game_state_observer.py  state_observable.py  test_runner.py
framework/training_service_module/: entity_manager.py  game_element_state.py  game_element_state_builder.py  i_action_converter.py  i_communication_service.py  i_communication_service_training.py  i_game_element_state_builder.py  i_observation_maker.py  i_state_converter.py  observation_maker.py  state_entity.py  trainer.py  training_service.py
game_service/: ObservableProxy.py  client_event.py  client_service.py  event_factory.py  game_service.py  game_state_observer.py  state_decoder.py  state_observable.py  state_observer.py  state_strategy.py  test_runner.py
game_service/exceptions/: key_not_found_exception.py
game_service/pygame_helpers/: pygame_event_factory.py  pygame_events.py
game_service/rest_helpers/: communication_service_rest_api.py
game_service/tests/: observers.py  tests.py
game_service_module/: event_factory.py  game_service.py  game_state_observer.py  state_observable.py  test_runner.py
game_service_module/pygame_helpers/: pygame_event_factory.py  pygame_events.py
game_service_module/rest_helpers/: communication_service_rest_api.py
games_examples/batkill/: play.py
games_examples/dont_touch/: best_score.json  main.py  play.py
games_examples/flappy_bird/: params.py  play.py
games_examples/snake/: observables.py  observers.py  play.py
games_examples/super_mario/: main.py  read_logs.py
gym_pygame/: __init__.py  play.py  setup.py
gym_pygame/envs/: __init__.py  params.py  rl_flappy.py
learning/: demo.py  demo_flappy_bird.py  demo_hide_and_seek.py  learn.py  learn_flappy_bird.py  learn_hide_and_seek.py  policy_network.py  policy_network_hide_and_seek.py  reinforce.py  reinforce_hide_and_seek.py
src/: game.py  lidar.py  pipe.py  pipe_generator.py  player.py  sight_line.py
src/xumes/: __init__.py  (+1 more)
tests/: test.py
xumes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+564 files in other folders)
